# log-analyzer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yaml
reports/: report-2017.06.30.html
src/: hello.py  log_analyzer.py
src/otus_log_analyzer/: log_analyzer.py
src/otus_log_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.yaml  test_log_analyzer.py
